stylesheets/website.css
img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#ven {
  width: 55%;
}

#cities {
  padding-bottom: 2.5em;
}

#berkeley {
  width: 30%;
}

h1, h2, h3 {
  font-family: 'Roboto Condensed', sans-serif;
  text-align: center;
  letter-spacing: -1px;
  font-weight: bold;
}

.footer {
  margin-top: 3%;
  margin-right: 1%;
  margin-left: 1%;
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: bold;
  letter-spacing: -1px;
}

a {
  text-decoration: none;
  color: black;
}

#right {
  text-align: right;
  float: right;
}

#artsee {
  color: #E60000;
}

#vendable {
  color: #6DCDEE;
}

#portfolio {
  margin-top: 0;
  margin-right: 1%;
  margin-left: 1%;
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: bold;
  letter-spacing: -1px;
}

.scarlett {
  color: #8D1919;
}

.logo {
  display: inline;
  padding: 1em;
  padding-bottom: 0;
  height: 50px;
  width: 50px;
}

